# STAR-GCN

./: README.md  setup.py
GraphSampler/: CMakeLists.txt  README.md  compile_dycpu.sh  graph_sampler.cpp  graph_sampler.h  install.py  py_ext.cpp
datasets/ml-100k/: README.md
datasets/ml-1m/: README.md
experiments/: STAR-GCN.py
experiments/cfg/: inductive_ml_100k.yml  inductive_ml_100k_item_10.yml  inductive_ml_100k_item_30.yml  inductive_ml_100k_item_50.yml  inductive_ml_100k_user_10.yml  inductive_ml_100k_user_30.yml  inductive_ml_100k_user_50.yml  inductive_ml_1m_item_10.yml  inductive_ml_1m_item_30.yml  inductive_ml_1m_item_50.yml  inductive_ml_1m_user_10.yml  inductive_ml_1m_user_30.yml  inductive_ml_1m_user_50.yml  transductive_ml_100k.yml  transductive_ml_10m.yml  transductive_ml_1m.yml
mxgraph/: README.md  config.py  datasets.py  graph.py  iterators.py  sampler.py  utils.py
mxgraph/helpers/: metric_logger.py
mxgraph/layers/: __init__.py  aggregators.py  common.py  layers.py
seg_ops_cuda/: CMakeLists.txt  README.md  _backup.cu  seg_ops.cu
seg_ops_cuda/mxnet_op/: copy_all.sh  test_seg_ops.py
seg_ops_cuda/mxnet_op/backup/: seg_op.cc  seg_op.cu  seg_op.h
